# segarer

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1b963cb75698_schema_raw_canonical_provenance.py  3d5b495fb032_init.py  50fd0a96ba36_baseline.py  802f5039000b_init.py
app/: README.md  cli.py  main.py
app/core/: config.py
